Problems with IDE, fast save

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -5,6 +5,8 @@
  */
 
 // https://vuetifyjs.com/features/sass-variables/`
-// @use 'vuetify/settings' with (
-//   $color-pack: false
-// );
+@use 'vuetify/settings' with (
+$shadow-key-umbra-opacity: rgba(#5e5e5e, 0.04),
+$shadow-key-penumbra-opacity: rgba(#5e5e5e, 0.01),
+$shadow-key-ambient-opacity: rgba(#414141, 0.04),
+ );
