Fixed weak internet connection ux and changed to realtime loaders Updated deps

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,4 +3,5 @@
 $shadow-key-umbra-opacity: rgba(#5e5e5e, 0.04),
 $shadow-key-penumbra-opacity: rgba(#5e5e5e, 0.01),
 $shadow-key-ambient-opacity: rgba(#414141, 0.04),
+$skeleton-loader-image-height: 250px,
  );
